<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/text_view_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="20dp"
        android:text="@string/country_label"
        app:layout_constraintBottom_toTopOf="@+id/CountrySpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/CountrySpinner"
        android:layout_width="352dp"
        android:layout_height="47dp"
        android:layout_margin="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/custom_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/TravelSpinner"
        android:layout_width="352dp"
        android:layout_height="50dp"
        android:layout_margin="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/custom_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CountrySpinner" />

    <Spinner
        android:id="@+id/CitySpinner"
        android:layout_width="352dp"
        android:layout_height="50dp"
        android:layout_margin="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/custom_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TravelSpinner" />

    <Spinner
        android:id="@+id/AlertSpinner"
        android:layout_width="352dp"
        android:dropDownWidth="345dp"
        android:layout_height="50dp"
        android:paddingRight="25dp"
        android:layout_margin="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/custom_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CitySpinner" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="20dp"
        android:text="@string/travel_label"
        app:layout_constraintBottom_toTopOf="@+id/TravelSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CountrySpinner"
        app:layout_constraintVertical_bias="0.636" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="20dp"
        android:text="@string/city_label"
        app:layout_constraintBottom_toTopOf="@+id/CitySpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TravelSpinner"
        app:layout_constraintVertical_bias="0.523" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="20dp"
        android:text="@string/medical_label"
        app:layout_constraintBottom_toTopOf="@+id/AlertSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CitySpinner"
        app:layout_constraintVertical_bias="0.571" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/colorPrimary"
        android:radius="5dp"
        android:text="@string/button_label"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AlertSpinner" />

    <TextView
        android:id="@+id/countryErrorLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="20dp"
        android:text="@string/country_error"
        android:textColor="@color/colorRed"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/CountrySpinner"
        app:layout_constraintStart_toEndOf="@+id/text_view_result"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/travelErrorLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="25dp"
        android:text="@string/travel_error"
        android:textColor="@color/colorRed"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/TravelSpinner"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/CountrySpinner" />

    <TextView
        android:id="@+id/cityErrorLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="20dp"
        android:text="@string/city_error"
        android:textColor="@color/colorRed"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/CitySpinner"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/TravelSpinner" />

    <TextView
        android:id="@+id/medicalErrorLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="20dp"
        android:text="@string/medical_error"
        android:textColor="@color/colorRed"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/AlertSpinner"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/CitySpinner" />

    <TextView
        android:id="@+id/centerUpdateLabel"
        android:layout_width="352dp"
        android:layout_height="38dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="30dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/updateButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AlertSpinner" />

</androidx.constraintlayout.widget.ConstraintLayout>